--- a/templates/about.html
+++ b/templates/about.html
@@ -78,7 +78,8 @@
                 <div class="choose-single">
                     <i class="fas fa-utensils"></i>
                     <h4><a href="#">Shop Online</a></h4>
-                    <p>First, create an account. Then, choose your box size and delivery preferences. There's no contract, 
+                    <p>First, create an account. Then, choose your box size and delivery preferences. There's no
+                        contract,
                         no upfront costs.</p>
                 </div>
             </div>
@@ -200,9 +201,10 @@
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed accumsan diam.
-                                Suspendisse molestie nibh at tempor mollis. Integer aliquet facilisis felis, ac porta
-                                est cursus et.
+                                Adequate nutrition is one of the pillars of public health. The estimation of nutrient
+                                intake from food consumption requires reliable data on food composition. These data are
+                                also the fundamentals of food-based dietary guidelines for healthy nutrition, containing
+                                the necessary information on food sources for different nutrients.
                             </p>
                             <h3 class="testimonial-title">Abdur Rajjak</h3>
                         </div>
@@ -220,9 +222,10 @@
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed accumsan diam.
-                                Suspendisse molestie nibh at tempor mollis. Integer aliquet facilisis felis, ac porta
-                                est cursus et.
+                                Adequate nutrition is one of the pillars of public health. The estimation of nutrient
+                                intake from food consumption requires reliable data on food composition. These data are
+                                also the fundamentals of food-based dietary guidelines for healthy nutrition, containing
+                                the necessary information on food sources for different nutrients.
                             </p>
                             <h3 class="testimonial-title">Noman Bin</h3>
                         </div>
@@ -240,9 +243,10 @@
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed accumsan diam.
-                                Suspendisse molestie nibh at tempor mollis. Integer aliquet facilisis felis, ac porta
-                                est cursus et.
+                                Adequate nutrition is one of the pillars of public health. The estimation of nutrient
+                                intake from food consumption requires reliable data on food composition. These data are
+                                also the fundamentals of food-based dietary guidelines for healthy nutrition, containing
+                                the necessary information on food sources for different nutrients.
                             </p>
                             <h3 class="testimonial-title">Sajib Rahman</h3>
 
