--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,6 @@
 										<li><a href="/">Home</a></li>
 										<li><a href="/about">About</a></li>
 										<li class="position-static"><a href="/shop">Shop</a></li>
-										<li><a href="#">Blog</a></li>
 										<li><a href="/contact">Contact</a></li>
 									</ul>
 								</div>
@@ -99,14 +98,8 @@
 
 								<li>
 									<a href="/cart" id="cart-btn" title="Go to the cart"><i class="fas fa-cart-arrow-down"></i>
-										<span>
-											 <!-- {% if "cart" in session %}
-											 
-											 {{ session['cart'] }}
-											 {%else%}
-											 0
-											{% endif %}  -->
-										</span></a>
+										<span id="cart-size"></span>
+									</a>
 								</li>
 								{% if user_name %}
 								<li>Welcome <b>{{ user_name }}</b></li>
@@ -225,7 +218,7 @@
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
 					<div class="ft-bottom-left">
-						<img src="../static/img/blog/index.png" alt="">
+						<img src="../static/img/about/index.png" alt="">
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
