--- a/templates/contact.html
+++ b/templates/contact.html
@@ -67,14 +67,14 @@
     <div class="row pt-40">
         <div class="col-lg-6 order-lg-1 order-2">
             <div class="contact-form">
-                <form id="contact-form" method="POST" action="mail.php">
+                <form id="contact-form" method="POST">
                     <div class="form-group col-12">
                      <label>Name <span class="text-danger">*</span> </label>
-                     <input type="text" class="form-control" name="name"  required="" placeholder="Name">
+                     <input type="text" class="form-control" name="name"  required="" placeholder="Name" required>
                    </div>
                    <div class="form-group col-12">
                      <label>Email<span class="text-danger">*</span> </label>
-                     <input type="email" class="form-control" name="email"  required="" placeholder="Email">
+                     <input type="email" class="form-control" name="email"  required="" placeholder="Email" required>
                    </div>
                    <div class="form-group col-12">
                      <label>Message<span class="text-danger">*</span> </label>
