--- a/templates/registration.html
+++ b/templates/registration.html
@@ -34,20 +34,20 @@
                        <h3 class="title">Sign Up</h3>
                        <form class="form-horizontal" action="/registerprocess" method="POST">
                             <div class="form-group">
-                                <label>Last Name</label>
-                                <input name="last_name" class="form-control" type="text" placeholder="Last Name">
+                                <label>Last Name*</label>
+                                <input name="last_name" class="form-control" type="text" placeholder="Last Name" required>
                             </div>
                             <div class="form-group">
-                                <label>First Name</label>
-                                <input name="first_name" class="form-control" type="text" placeholder="First Name">
+                                <label>First Name*</label>
+                                <input name="first_name" class="form-control" type="text" placeholder="First Name" required>
                             </div>
                             <div class="form-group">
-                               <label>Email</label>
-                               <input name="email" class="form-control" type="email" placeholder="Email">
+                               <label>Email*</label>
+                               <input name="email" class="form-control" type="email" placeholder="Email" required>
                             </div>
                             <div class="form-group">
-                               <label>password</label>
-                               <input name="password" class="form-control" type="password" placeholder="password">
+                               <label>password*</label>
+                               <input name="password" class="form-control" type="password" placeholder="password" required>
                             </div>
                             <div class="form-group">
                                 <label>Sex</label>
@@ -67,8 +67,8 @@
                                 <input name="address" class="form-control" type="text" placeholder="Address">
                             </div>
                             <div class="form-group">
-                                <label>Phone Number</label>
-                                <input name="phone" class="form-control" type="text" placeholder="Phone">
+                                <label>Phone Number*</label>
+                                <input name="phone" class="form-control" type="text" placeholder="Phone" required>
                             </div>
                             <div class="form-group">
                                 <label>Activity field</label>
