--- a/templates/updateproduct.html
+++ b/templates/updateproduct.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="form-group">
                         <label>Rate /5</label>
-                        <input name="  " class="form-control" type="int" placeholder="rating" value="{{product.rating}}">
+                        <input name="rating" class="form-control" type="int" placeholder="rating" value="{{product.rating}}">
                     </div>
                     <div class="form-group">
                         <label>Image</label>
