--- a/templates/addproduct.html
+++ b/templates/addproduct.html
@@ -67,7 +67,7 @@
                         <input name="image_url" class="form-control" type="file" placeholder="unit_measure">
                     </div>
                     <div class="button-bar pt-20 text-end">
-                        <a  href="/adminproducts" class="btn btn-lg">Cancel</a>
+                        <button  class="cancel-be btn btn-lg">Cancel</button>
                         <input  type="submit" class="save-product btn btn-lg" value="Submit">
                     </div> 
                 </form>
