--- a/templates/base.html
+++ b/templates/base.html
@@ -167,12 +167,11 @@
 						</div>
 						<div class="footer-iteam">
 							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Faq</a></li>
+								<li><a href="/about">About Us</a></li>
+								<li><a href="/shop">Shop</a></li>
 								<li><a href="#">Help</a></li>
 								<li><a href="#">My Account</a></li>
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="/contact">Contact</a></li>
 							</ul>
 						</div>
 					</div>
@@ -189,7 +188,6 @@
 								<li><a href="#">Fish</a></li>
 								<li><a href="#">Meat</a></li>
 								<li><a href="#">Bestseller</a></li>
-								<li><a href="#">Salads</a></li>
 							</ul>
 						</div>
 					</div>
