--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="/product/{{ product.product_id }}" data-bs-toggle="modal" data-bs-target="#exampleModal">{{product.name}}</a></h3>
-                    <div class="price">{{ product.price_str() }} <span>{{product.price_str()}}</span></div>
+                    <div class="price">{{ product.price_str() }} </div>
                 </div>
             </div>
             {% endfor %}
