--- a/templates/updateproduct.html
+++ b/templates/updateproduct.html
@@ -70,7 +70,7 @@
                         <input name="image_url" class="form-control" type="file" placeholder="unit_measure">
                     </div>
                     <div class="button-bar pt-20 text-end">
-                        <a  href="/adminproducts">Cancel</a>
+                        <button  class="cancel-be btn btn-lg">Cancel</button>
                         <input  type="submit" class="update-product btn btn-lg" value="Submit">
                         <input name="product_id" type="hidden" value="{{product.product_id}}">
                     </div> 
